--- a/projects/navigation/toggle/src/lib/toggle.component.scss
+++ b/projects/navigation/toggle/src/lib/toggle.component.scss
@@ -26,8 +26,8 @@
 // Styles for when a switcher is used in a mega menu
 :host-context(.xcu-mega-menu) {
   .menu__chevron {
-    --menu-transition: .1s;
-    --menu-transition-delay: .1s;
+    --menu-transition: 0.05s;
+    --menu-transition-delay: 0.05s;
     --menu-chevron__border-color: #dedddc;
     --transform-translate-x: 0.5rem;
     --transform-translate-y: 5.4rem;
@@ -68,8 +68,8 @@
   }
 
   .menu__chevron--active {
-    --menu-transition: .1s;
-    --menu-transition-delay: .1s;
+    --menu-transition: 0.1s;
+    --menu-transition-delay: 0.1s;
     --chevron-translateY: var(--chevron-active-translateY, 3.7rem);
 
     opacity: 1;
