feat(mega-menu): add link hover CSS style

--- a/projects/navigation/mega-menu/src/lib/mega-menu-item/mega-menu-item.component.scss
+++ b/projects/navigation/mega-menu/src/lib/mega-menu-item/mega-menu-item.component.scss
@@ -3,6 +3,19 @@
 
   display: flex;
   align-items: flex-start;
+
+  &:hover {
+    .title > :first-child {
+      color: var(--mega-menu-title__color--hover, var(--textcolor));
+    }
+
+    .description {
+      color: var(
+        --mega-menu-description__color--hover,
+        var(--textcolor--secondary)
+      );
+    }
+  }
 }
 
 .icon {
