feat(nav-toggle): emit events when toggle values change

--- a/projects/navigation/mega-menu/src/lib/mega-menu.component.html
+++ b/projects/navigation/mega-menu/src/lib/mega-menu.component.html
@@ -1,4 +1,4 @@
-<xcu-nav-toggle [title]="link?.title" [href]="link?.fragment" [isActive]="isActive" (toggled)="isActive = $event"
+<xcu-nav-toggle [title]="link?.title" [href]="link?.fragment" [isActive]="isActive" (toggled)="toggle($event)"
   [openOnHover]="openOnHover" [shouldShowArrow]="shouldShowArrow">
 </xcu-nav-toggle>
 
