--- a/projects/form/checkbox/src/lib/checkbox.component.html
+++ b/projects/form/checkbox/src/lib/checkbox.component.html
@@ -1,5 +1,7 @@
 <input #input class="xcu-checkbox-input" type="checkbox" [id]="inputId" [required]="required" [checked]="checked"
-  [disabled]="disabled" [attr.name]="name" [attr.aria-label]="ariaLabel || null" [attr.aria-labelledBy]="ariaLabelledby" [attr.aria-checked]="getAriaChecked()" [attr.aria-describedby]="ariaDescribedby" (change)="onInteractionEvent($event)" (click)="onInputClick($event)">
+  [disabled]="disabled" [attr.name]="name" [attr.aria-label]="ariaLabel || null" [attr.aria-labelledBy]="ariaLabelledby"
+  [attr.aria-checked]="getAriaChecked()" [attr.aria-describedby]="ariaDescribedby" (change)="onInteractionEvent($event)"
+  (click)="onInputClick($event)">
 
 <label #checkboxLabel [attr.for]="inputId" class="xcu-checkbox-label">
   <ng-content></ng-content>
