--- a/projects/form/checkbox/src/lib/checkbox.component.scss
+++ b/projects/form/checkbox/src/lib/checkbox.component.scss
@@ -9,6 +9,10 @@
     --checkbox-width: 1.6rem;
     --checkbox-font-size: 1.4rem;
   }
+
+  &.disabled {
+    cursor: default;
+  }
 }
 
 .xcu-checkbox-input {
@@ -26,9 +30,10 @@
   background-color: var(--checkbox-background-color, initial);
   border: 2px solid var(--checkbox-border-color, var(--theme-primary));
   border-radius: var(--checkbox-border-radius, 2px);
-  transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform;
-  transition-timing-function: cubic-bezier(.4,0,.2,1);
-  transition-duration: .15s;
+  transition-property: background-color, border-color, color, fill, stroke,
+    opacity, box-shadow, transform;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 0.15s;
   margin: 0;
 
   &:checked {
@@ -42,20 +47,29 @@
 
   &:focus {
     outline: none;
-    box-shadow: 0 0 0 3px rgb(0 79 113 / .45);
+    box-shadow: 0 0 0 3px rgb(0 79 113 / 0.45);
     border-color: var(--theme-primary);
 
     @media (prefers-color-scheme: dark) {
-      box-shadow: 0 0 0 3px rgb(87 193 142 / .45);
+      box-shadow: 0 0 0 3px rgb(87 193 142 / 0.45);
     }
 
     &:invalid {
-      box-shadow: 0 0 0 3px rgb(211 47 47 / .45);
+      box-shadow: 0 0 0 3px rgb(211 47 47 / 0.45);
     }
   }
 
   &:invalid {
     border-color: var(--theme-warning);
+  }
+
+  &[disabled],
+  &.disabled {
+    background-color: #b0b0b0;
+
+    @media (prefers-color-scheme: dark) {
+      background-color: #686868;
+    }
   }
 }
 
