--- a/projects/navigation/toggle/src/lib/toggle.component.html
+++ b/projects/navigation/toggle/src/lib/toggle.component.html
@@ -1,5 +1,11 @@
 <ng-template #contents>
-  {{ title }}
+  <span class="pre">
+    <ng-content></ng-content>
+  </span>
+
+  <span *ngIf="title" class="title">
+    {{ title }}
+  </span>
 
   <svg *ngIf="shouldShowArrow" fill="currentColor" viewBox="0 0 20 20" height="20" width="20" class="menu__arrow"
     aria-labelledby="toggle-description">
