feat(switcher): pass ng-content to toggle

--- a/projects/navigation/switcher/src/lib/switcher.component.html
+++ b/projects/navigation/switcher/src/lib/switcher.component.html
@@ -1,8 +1,10 @@
-<xcu-nav-toggle [title]="link.title" [isActive]="isActive" (toggled)="isActive = $event" [openOnHover]="openOnHover">
+<xcu-nav-toggle [title]="link?.title" [isActive]="isActive" (toggled)="isActive = $event" [openOnHover]="openOnHover">
+  <ng-content></ng-content>
 </xcu-nav-toggle>
 
 <div (mouseleave)="onHoverOut($event)" (touchend)="onHoverOut($event)" class="shadow">
-  <nav role="navigation" [attr.aria-label]="link.title">
-    <a *ngFor="let sublink of link.links" [routerLink]="'.'" [fragment]="sublink.fragment || ''">{{ sublink.title }}</a>
+  <nav role="navigation" [attr.aria-label]="link?.title">
+    <a *ngFor="let sublink of link?.links" [routerLink]="'.'"
+      [fragment]="sublink.fragment || ''">{{ sublink.title }}</a>
   </nav>
 </div>
