--- a/projects/navigation/switcher/src/lib/switcher.component.scss
+++ b/projects/navigation/switcher/src/lib/switcher.component.scss
@@ -20,7 +20,7 @@
   position: absolute;
   z-index: 999;
   right: auto;
-  left: -18px;
+  left: calc(-18px + var(--shadow-offset, 0));
   top: 100%;
 }
 
