--- a/projects/navigation/page-nav/src/lib/page-nav.component.html
+++ b/projects/navigation/page-nav/src/lib/page-nav.component.html
@@ -7,8 +7,7 @@
     <ul role="list" aria-label="Page navigation">
       <ng-container *ngFor="let link of links">
         <li>
-          <a [routerLink]="[link.prefix ? link.prefix : {}, link.fragment]" routerLinkActive="active"
-            class="colorize">{{ link.title }}</a>
+          <a [routerLink]="link.href" routerLinkActive="active" class="colorize">{{ link.title }}</a>
         </li>
       </ng-container>
     </ul>
