--- a/projects/navigation/switcher/src/lib/switcher.component.html
+++ b/projects/navigation/switcher/src/lib/switcher.component.html
@@ -6,7 +6,9 @@
   <nav role="navigation" [attr.aria-label]="link?.title">
     <ng-container *ngFor="let sublink of link?.links">
       <div *ngIf="sublink.dividerPosition === 'ABOVE'" class='divider'></div>
-      <a [routerLink]="sublink?.href || '.'" [fragment]="sublink?.fragment || null">{{ sublink.title }}</a>
+      <a *ngIf="!sublink.onClick" [routerLink]="sublink?.href || '.'"
+        [fragment]="sublink?.fragment || null">{{ sublink.title }}</a>
+      <a *ngIf="sublink.onClick" (click)="sublink.onClick()">{{ sublink.title }}</a>
       <div *ngIf="sublink.dividerPosition === 'BELOW'" class='divider'></div>
     </ng-container>
   </nav>
