feat(avatar): add lazy loading to avatar image

--- a/projects/avatar/src/lib/avatar.component.html
+++ b/projects/avatar/src/lib/avatar.component.html
@@ -1,2 +1,2 @@
-<img *ngIf="imageUrl" src="{{ imageUrl }}" alt="{{ alt }}">
+<img *ngIf="imageUrl" src="{{ imageUrl }}" alt="{{ alt }}" loading=lazy>
 <div *ngIf="hasNotification" class="dot"></div>
