--- a/projects/badge/src/lib/badge.component.scss
+++ b/projects/badge/src/lib/badge.component.scss
@@ -98,6 +98,10 @@
   &.primary {
     background-color: var(--theme-primary);
     color: #fff;
+
+    @media (prefers-color-scheme: dark) {
+      color: var(--color--bunker, #101820);
+    }
   }
 
   &.secondary {
