refactor(badge): set color of primary badge to Bunker for accessibility

--- a/projects/badge/src/lib/badge.component.scss
+++ b/projects/badge/src/lib/badge.component.scss
@@ -97,7 +97,7 @@
 
   &.primary {
     background-color: var(--theme-primary);
-    color: #fff;
+    color: var(--color--bunker, #101820);
   }
 
   &.secondary {
