--- a/projects/form/checkbox/src/lib/checkbox.component.html
+++ b/projects/form/checkbox/src/lib/checkbox.component.html
@@ -5,4 +5,6 @@
 
 <label #checkboxLabel [attr.for]="inputId" class="xcu-checkbox-label">
   <ng-content></ng-content>
+
+  <ng-content select=".end"></ng-content>
 </label>
