refactor(button): remove right margin by default

--- a/projects/button/src/lib/button.component.scss
+++ b/projects/button/src/lib/button.component.scss
@@ -23,7 +23,7 @@
   font-weight: 600;
   height: calc(var(--button__height) + var(--button__border-width));
   line-height: var(--button__height);
-  margin-right: 16px;
+  // margin-right: 16px;
   overflow: hidden;
   padding: var(--button__padding);
   text-align: center;
