--- a/projects/navigation/switcher/src/lib/switcher.component.scss
+++ b/projects/navigation/switcher/src/lib/switcher.component.scss
@@ -45,7 +45,7 @@ nav {
   box-shadow: 0 0 0 1px rgb(136 152 170 / 10%),
     0 15px 35px 0 rgb(49 49 93 / 10%), 0 5px 15px 0 rgb(0 0 0 / 8%);
   margin-top: 0.8rem;
-  max-height: 480px;
+  max-height: var(--switcher--max-height, 48rem);
   overflow: hidden;
   overflow-y: auto;
 
