--- a/projects/slide-over/src/lib/slide-over.component.scss
+++ b/projects/slide-over/src/lib/slide-over.component.scss
@@ -12,7 +12,7 @@
     pointer-events: initial;
 
     .overlay {
-      opacity: 1;
+      opacity: 0;
     }
 
     .panel {
@@ -27,6 +27,12 @@
   &.wide {
     .panel {
       max-width: 70.4rem;
+    }
+  }
+
+  &.overlay.open {
+    .overlay {
+      opacity: 1;
     }
   }
 }
