feat(form-field): update Input and Form Field to have more Input control

--- a/projects/form/form-field/src/lib/form-field.component.html
+++ b/projects/form/form-field/src/lib/form-field.component.html
@@ -2,4 +2,8 @@
 
 <ng-content #input select="input"></ng-content>
 
-<ng-content #help select="p"></ng-content>
+<ng-container [ngSwitch]="getDisplayedMessages()">
+  <ng-container *ngSwitchCase="'error'">
+    <ng-content #hint select="[xcu-hint]"></ng-content>
+  </ng-container>
+</ng-container>
