--- a/projects/form/form-field/src/lib/form-field.component.scss
+++ b/projects/form/form-field/src/lib/form-field.component.scss
@@ -79,3 +79,26 @@
     padding: 0 0 0 1.2rem;
   }
 }
+
+.xcu-form-field--invalid {
+  textarea,
+  input[type='text'],
+  input[type='password'],
+  input[type='file'],
+  input[type='datetime'],
+  input[type='datetime-local'],
+  input[type='date'],
+  input[type='month'],
+  input[type='time'],
+  input[type='week'],
+  input[type='number'],
+  input[type='email'],
+  input[type='url'],
+  input[type='search'],
+  input[type='tel'],
+  input[type='color'] {
+    outline: none;
+    border: 1px solid var(--theme-warning);
+    box-shadow: inset 0 0 0 1px var(--theme-warning);
+  }
+}
