--- a/projects/form/form-field/src/lib/form-field.component.html
+++ b/projects/form/form-field/src/lib/form-field.component.html
@@ -2,8 +2,22 @@
 
 <ng-content #input select="input"></ng-content>
 
+<div *ngIf="control.controlType === 'xcu-native-select'" class="select">
+  <ng-content #input select="input,select"></ng-content>
+
+  <span class="select-arrows">
+    <svg class="h-5 w-5 text-gray-400" viewBox="0 0 20 20" width="20" height="20" fill="none" stroke="currentColor">
+      <path d="M7 7l3-3 3 3m0 6l-3 3-3-3" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+    </svg>
+  </span>
+</div>
+
 <ng-container [ngSwitch]="getDisplayedMessages()">
   <ng-container *ngSwitchCase="'error'">
+    <ng-content #error select="[xcu-error]"></ng-content>
+  </ng-container>
+
+  <ng-container *ngSwitchCase="'hint'">
     <ng-content #hint select="[xcu-hint]"></ng-content>
   </ng-container>
 </ng-container>
