--- a/projects/form/input/src/lib/input.component.scss
+++ b/projects/form/input/src/lib/input.component.scss
@@ -1,14 +1,39 @@
 :host {
-  display: inline-block;
-  padding: 0 8px;
-  margin-bottom: 24px;
-  vertical-align: middle;
-  border-radius: 2px;
-  min-width: 50px;
-  max-width: 635px;
-  width: 100%;
-  min-height: 36px;
+  --margin-bottom: 8px;
   // background-color: #ffffff;
+  border-radius: 2px;
   border: 1px solid rgba(36, 28, 21, 0.3);
+  display: inline-block;
+  font-family: inherit;
+  margin-bottom: var(--margin-bottom);
+  max-width: 635px;
+  min-height: 36px;
+  min-width: 56px;
+  padding: 0 12px;
   transition: all 0.2s ease-in-out 0s;
+  vertical-align: middle;
+  width: 100%;
+
+  &:focus {
+    outline: none;
+    border: 1px solid var(--theme-primary);
+    box-shadow: inset 0 0 0 1px var(--theme-primary);
+  }
+
+  &:invalid {
+    outline: none;
+    border: 1px solid var(--theme-warning);
+    box-shadow: inset 0 0 0 1px var(--theme-warning);
+  }
+}
+
+:host(select) {
+  appearance: none;
+  padding-right: 24px;
+}
+
+:host-context(.xcu-form-field--invalid) {
+  outline: none;
+  border: 1px solid var(--theme-warning);
+  box-shadow: inset 0 0 0 1px var(--theme-warning);
 }
