refactor: rename CSS variables to match new naming style

--- a/projects/badge/src/lib/badge.component.scss
+++ b/projects/badge/src/lib/badge.component.scss
@@ -105,7 +105,7 @@
   }
 
   &.secondary {
-    background-color: var(--theme-secondary);
+    background-color: var(--theme--secondary);
     color: var(--textcolor);
   }
 }
