--- a/projects/navigation/switcher/src/lib/switcher.component.scss
+++ b/projects/navigation/switcher/src/lib/switcher.component.scss
@@ -39,7 +39,7 @@ nav {
   display: flex;
   flex-direction: column;
   // border: 1px solid #dedddc;
-  background-color: var(--theme-background);
+  background-color: var(--theme--background);
   white-space: nowrap;
   border-radius: 2px;
   box-shadow: 0 0 0 1px rgb(136 152 170 / 10%),
