--- a/projects/form/checkbox/src/lib/checkbox.component.scss
+++ b/projects/form/checkbox/src/lib/checkbox.component.scss
@@ -46,7 +46,7 @@
     background-size: 100% 100%;
     background-position: 50%;
     background-repeat: no-repeat;
-    color: var(--checkbox-color--selected, var(--theme-background));
+    color: var(--checkbox-color--selected, var(--theme--background));
   }
 
   &:focus {
@@ -64,7 +64,7 @@
   }
 
   &:invalid {
-    border-color: var(--theme-warning);
+    border-color: var(--color--warning);
   }
 
   &[disabled],
