--- a/projects/form/input/src/lib/input.component.scss
+++ b/projects/form/input/src/lib/input.component.scss
@@ -22,8 +22,8 @@
 
   &:invalid {
     outline: none;
-    border: 1px solid var(--theme-warning);
-    box-shadow: inset 0 0 0 1px var(--theme-warning);
+    border: 1px solid var(--color--warning);
+    box-shadow: inset 0 0 0 1px var(--color--warning);
   }
 }
 
@@ -34,6 +34,6 @@
 
 :host-context(.xcu-form-field--invalid) {
   outline: none;
-  border: 1px solid var(--theme-warning);
-  box-shadow: inset 0 0 0 1px var(--theme-warning);
+  border: 1px solid var(--color--warning);
+  box-shadow: inset 0 0 0 1px var(--color--warning);
 }
