refactor: change CSS variables to match new color naming

--- a/projects/badge/src/lib/badge.component.scss
+++ b/projects/badge/src/lib/badge.component.scss
@@ -96,7 +96,7 @@
   }
 
   &.primary {
-    background-color: var(--theme-primary);
+    background-color: var(--theme--primary);
     color: #fff;
 
     @media (prefers-color-scheme: dark) {
