--- a/projects/form/input/src/lib/input.component.scss
+++ b/projects/form/input/src/lib/input.component.scss
@@ -16,8 +16,8 @@
 
   &:focus {
     outline: none;
-    border: 1px solid var(--theme-primary);
-    box-shadow: inset 0 0 0 1px var(--theme-primary);
+    border: 1px solid var(--theme--primary);
+    box-shadow: inset 0 0 0 1px var(--theme--primary);
   }
 
   &:invalid {
