--- a/projects/navigation/page-nav/src/lib/page-nav.component.scss
+++ b/projects/navigation/page-nav/src/lib/page-nav.component.scss
@@ -1,6 +1,6 @@
 :host {
-  --page-nav-color: var(--theme-primary);
-  --page-nav-color--active: var(--theme-primary);
+  --page-nav-color: var(--theme--primary);
+  --page-nav-color--active: var(--theme--primary);
   --page-nav-font-size: 1.5rem;
   --page-nav-font-weight: var(--font-weight--semi-bold);
   --page-nav-text-transform: uppercase;
