--- a/projects/avatar/src/lib/avatar.component.scss
+++ b/projects/avatar/src/lib/avatar.component.scss
@@ -99,7 +99,7 @@ img {
   --dot-height: 1rem;
   --dot-width: 1rem;
 
-  background: var(--theme-primary);
+  background: var(--theme--primary);
   border-radius: 9999px;
   border-style: solid;
   box-shadow: 0 0 0 2px currentColor;
