--- a/projects/form/checkbox/src/lib/checkbox.component.scss
+++ b/projects/form/checkbox/src/lib/checkbox.component.scss
@@ -26,9 +26,9 @@
   flex-shrink: 0;
   height: var(--checkbox-width);
   width: var(--checkbox-width);
-  color: var(--checkbox-color, var(--theme-primary));
+  color: var(--checkbox-color, var(--theme--primary));
   background-color: var(--checkbox-background-color, initial);
-  border: 2px solid var(--checkbox-border-color, var(--theme-primary));
+  border: 2px solid var(--checkbox-border-color, var(--theme--primary));
   border-radius: var(--checkbox-border-radius, 2px);
   transition-property: background-color, border-color, color, fill, stroke,
     opacity, box-shadow, transform;
@@ -41,7 +41,7 @@
     border-color: transparent;
     background-color: var(
       --checkbox-background-color--selected,
-      var(--theme-primary)
+      var(--theme--primary)
     );
     background-size: 100% 100%;
     background-position: 50%;
@@ -52,7 +52,7 @@
   &:focus {
     outline: none;
     box-shadow: 0 0 0 3px rgb(0 79 113 / 0.45);
-    border-color: var(--theme-primary);
+    border-color: var(--theme--primary);
 
     @media (prefers-color-scheme: dark) {
       box-shadow: 0 0 0 3px rgb(87 193 142 / 0.45);
