--- a/projects/navigation/local-nav/src/lib/local-nav.component.scss
+++ b/projects/navigation/local-nav/src/lib/local-nav.component.scss
@@ -39,7 +39,7 @@
       padding: 16px 24px 16px 0;
 
       &:hover {
-        color: var(--theme-primary);
+        color: var(--theme--primary);
       }
     }
   }
