--- a/projects/navigation/mega-menu/src/lib/mega-menu-item/mega-menu-item.component.scss
+++ b/projects/navigation/mega-menu/src/lib/mega-menu-item/mega-menu-item.component.scss
@@ -1,5 +1,5 @@
 :host {
-  --icon-bg-color: var(--theme-primary);
+  --icon-bg-color: var(--theme--primary);
 
   display: flex;
   align-items: flex-start;
