--- a/projects/avatar/src/lib/avatar-stack/avatar-stack.component.html
+++ b/projects/avatar/src/lib/avatar-stack/avatar-stack.component.html
@@ -1,3 +1,3 @@
 <ng-content></ng-content>
 
-<span *ngIf="maxLengthDifference" class="more-count">+{{ maxLengthDifference }}</span>
+<span *ngIf="maxLengthDifference >= 1" class="more-count">+{{ maxLengthDifference }}</span>
