refactor(button): font color on primary buttons should be darker on light theme

--- a/projects/button/src/lib/button.component.scss
+++ b/projects/button/src/lib/button.component.scss
@@ -75,7 +75,7 @@
 
   &.xcu-button--primary:not([disabled]) {
     background-color: var(--button__background-color);
-    color: var(--button-text--on-dark);
+    color: var(--button-text);
   }
 
   &.xcu-button--secondary.xcu-button--warning:not([disabled]) {
