--- a/projects/avatar/src/lib/avatar.component.scss
+++ b/projects/avatar/src/lib/avatar.component.scss
@@ -36,6 +36,7 @@
       --dot-width: 0.6rem;
 
       height: var(--dot-height);
+      min-width: var(--dot-width);
       width: var(--dot-width);
     }
   }
@@ -52,6 +53,7 @@
       --dot-width: 0.8rem;
 
       height: var(--dot-height);
+      min-width: var(--dot-width);
       width: var(--dot-width);
     }
   }
@@ -68,6 +70,7 @@
       --dot-width: 1.2rem;
 
       height: var(--dot-height);
+      min-width: var(--dot-width);
       width: var(--dot-width);
     }
   }
@@ -84,6 +87,7 @@
       --dot-width: 1.4rem;
 
       height: var(--dot-height);
+      min-width: var(--dot-width);
       width: var(--dot-width);
     }
   }
@@ -100,6 +104,7 @@ img {
   display: inline-block;
   max-width: 100%;
   height: 4rem;
+  min-width: 4rem;
   width: 4rem;
   vertical-align: middle;
 }
@@ -117,6 +122,7 @@ img {
   position: absolute;
   right: 0;
   top: 0;
+  min-width: var(--dot-width);
   width: var(--dot-width);
 }
 
