--- a/projects/navigation/switcher/src/lib/switcher.component.html
+++ b/projects/navigation/switcher/src/lib/switcher.component.html
@@ -1,5 +1,5 @@
-<xcu-nav-toggle [title]="link?.title" [isActive]="isActive" (toggled)="isActive = $event" [openOnHover]="openOnHover"
-  [shouldShowArrow]="shouldShowArrow" [parentEl]="elementRef" [bordered]="bordered">
+<xcu-nav-toggle #toggleEl [title]="link?.title" [isActive]="isActive" (toggled)="isActive = $event"
+  [openOnHover]="openOnHover" [shouldShowArrow]="shouldShowArrow" [parentEl]="elementRef" [bordered]="bordered">
   <span class="toggle-start">
     <ng-content select="[start]"></ng-content>
   </span>
@@ -11,13 +11,13 @@
   </span>
 </xcu-nav-toggle>
 
-<div (mouseleave)="onHoverOut($event)" (touchend)="onHoverOut($event)" class="shadow">
+<div #menuEl (mouseleave)="onHoverOut($event)" (touchend)="onHoverOut($event)" class="shadow">
   <nav role="navigation" [attr.aria-label]="link?.title">
     <ng-container *ngFor="let sublink of link?.links">
       <div *ngIf="sublink.dividerPosition === 'ABOVE'" class='divider'></div>
-      <a *ngIf="!sublink.onClick" [routerLink]="sublink?.href || '.'"
-        [fragment]="sublink?.fragment || null">{{ sublink.title }}</a>
-      <a *ngIf="sublink.onClick" (click)="sublink.onClick()">{{ sublink.title }}</a>
+      <a *ngIf="!sublink.onClick" [routerLink]="sublink?.href || '.'" [fragment]="sublink?.fragment || null"
+        class="nav__link">{{ sublink.title }}</a>
+      <a *ngIf="sublink.onClick" (click)="sublink.onClick()" class="nav__link">{{ sublink.title }}</a>
       <div *ngIf="sublink.dividerPosition === 'BELOW'" class='divider'></div>
     </ng-container>
 
