--- a/projects/navigation/switcher/src/lib/switcher.component.scss
+++ b/projects/navigation/switcher/src/lib/switcher.component.scss
@@ -29,8 +29,7 @@ a + .divider,
   position: absolute;
   z-index: 999;
   right: auto;
-  left: calc(-18px + var(--shadow-offset, 0));
-  top: 100%;
+  left: calc(-16px + var(--shadow-offset, 0px));
 }
 
 nav {
@@ -44,7 +43,6 @@ nav {
   border-radius: 2px;
   box-shadow: 0 0 0 1px rgb(136 152 170 / 10%),
     0 15px 35px 0 rgb(49 49 93 / 10%), 0 5px 15px 0 rgb(0 0 0 / 8%);
-  margin-top: 0.8rem;
   max-height: var(--switcher--max-height, 48rem);
   overflow: hidden;
   overflow-y: auto;
@@ -56,15 +54,44 @@ nav {
       0 15px 35px 0 rgb(49 61 93 / 24%), 0 5px 15px 0 rgb(0 0 0 / 69%);
   }
 
-  a {
+  .nav__link {
+    display: block;
     color: inherit;
     font-size: 1.4rem;
-    padding: 12px 18px;
+    padding: 12px 16px;
     transition: background-color 0.18s ease-in-out 0s;
 
     &:hover {
       background-color: var(--nav-link__hover-color);
     }
+  }
+}
+
+// Menu is positioned below
+:host-context(.below) {
+  .shadow {
+    top: 100%;
+
+    nav {
+      margin-top: 0.8rem;
+    }
+  }
+}
+
+// Menu is positioned above
+:host-context(.above) {
+  .shadow {
+    bottom: 100%;
+
+    nav {
+      margin-bottom: 0.8rem;
+    }
+  }
+}
+
+:host-context(.bordered) {
+  .shadow {
+    left: calc(-8px + var(--shadow-offset, 0px));
   }
 }
 
