--- a/projects/navigation/switcher/src/lib/switcher.component.scss
+++ b/projects/navigation/switcher/src/lib/switcher.component.scss
@@ -1,5 +1,6 @@
 :host {
   --switcher__border-color: #d3dddc;
+  --shadow__offset: 1.6rem;
 
   display: inline-flex;
   position: relative;
@@ -28,8 +29,6 @@ a + .divider,
   display: none;
   position: absolute;
   z-index: 999;
-  right: auto;
-  left: calc(-16px + var(--shadow-offset, 0px));
 }
 
 nav {
@@ -89,9 +88,27 @@ nav {
   }
 }
 
+// Menu is positioned before
+:host-context(.before) {
+  .shadow {
+    left: auto;
+    right: calc(var(--shadow__offset, 1.6rem) + var(--shadow-offset, 0px));
+  }
+}
+
+// Menu is positioned after
+:host-context(.after) {
+  .shadow {
+    right: auto;
+    left: calc(
+      (-1 * var(--shadow__offset, 1.6rem)) + var(--shadow-offset, 0px)
+    );
+  }
+}
+
 :host-context(.bordered) {
   .shadow {
-    left: calc(-8px + var(--shadow-offset, 0px));
+    --shadow__offset: 0.8rem;
   }
 }
 
@@ -153,9 +170,9 @@ nav {
 }
 
 .toggle-start:not(:empty) {
-  margin-right: 1.2rem;
+  margin-right: var(--toggle__inner-padding, 1.2rem);
 }
 
 .toggle-end:not(:empty) {
-  margin-left: 1.2rem;
+  margin-left: var(--toggle__inner-padding, 1.2rem);
 }
