feat(avatar): add optional Profile image directive instead of requiring avatar

--- a/projects/avatar/src/lib/profile/profile.component.html
+++ b/projects/avatar/src/lib/profile/profile.component.html
@@ -1,3 +1,4 @@
+<ng-content select="[profile-image]"></ng-content>
 <ng-content select="xcu-avatar,[xcu-avatar]"></ng-content>
 
 <div class="profile">
