--- a/projects/layout/panel/src/lib/panel.component.scss
+++ b/projects/layout/panel/src/lib/panel.component.scss
@@ -2,29 +2,35 @@
   border-radius: 2px;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
   background-color: #fff;
+  display: flex;
+  flex-direction: column;
 
-  &.size--xs {
+  @media (prefers-color-scheme: dark) {
+    background-color: var(--theme--background-accent);
+  }
+
+  &.depth--xs {
     box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.05);
   }
-  &.size--sm {
+  &.depth--sm {
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
   }
-  &.size--base {
+  &.depth--base {
     box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
   }
-  &.size--md {
+  &.depth--md {
     box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
       0 2px 4px -1px rgba(0, 0, 0, 0.06);
   }
-  &.size--lg {
+  &.depth--lg {
     box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
       0 4px 6px -2px rgba(0, 0, 0, 0.05);
   }
-  &.size--xl {
+  &.depth--xl {
     box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1),
       0 10px 10px -5px rgba(0, 0, 0, 0.04);
   }
-  &.size--2xl {
+  &.depth--2xl {
     box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
   }
 
