--- a/projects/layout/panel/src/lib/panel.component.scss
+++ b/projects/layout/panel/src/lib/panel.component.scss
@@ -36,9 +36,10 @@
 
   &.well {
     background-color: #f9fafb;
+    box-shadow: inset 0 2px 4px 0 rgba(0, 0, 0, 0.06);
 
     @media (prefers-color-scheme: dark) {
-      background-color: var(--theme--background-accent);
+      background-color: #1a2632;
     }
   }
 
