--- a/projects/layout/panel/src/lib/footer/footer.component.scss
+++ b/projects/layout/panel/src/lib/footer/footer.component.scss
@@ -3,6 +3,10 @@
   padding: var(--footer--padding, 2.4rem);
 
   &.bordered {
-    border-color: var(--theme--background-accent);
+    border-color: rgba(0, 0, 0, 0.05);
+
+    @media (prefers-color-scheme: dark) {
+      border-color: rgba(0, 0, 0, 0.15);
+    }
   }
 }
