--- a/projects/navigation/list/src/lib/list-item/list-item.component.scss
+++ b/projects/navigation/list/src/lib/list-item/list-item.component.scss
@@ -5,11 +5,12 @@
   border-radius: 2px;
   color: var(--list-item__color, inherit);
   display: flex;
-  height: 4.8rem;
+  min-height: 4.8rem;
   justify-content: space-between;
   margin-bottom: 0.8rem;
   padding: 0 1.6rem;
   position: relative;
+  word-break: break-word;
 
   @media (prefers-color-scheme: dark) {
     --list-item__hover-color: var(--color--green-pea);
