--- a/projects/button/src/lib/button.component.scss
+++ b/projects/button/src/lib/button.component.scss
@@ -9,18 +9,20 @@
   --button__padding: 0 16px;
   --button__height: 40px;
   --button__font-size: 1.4rem;
+  --button__font-weight: 600;
   --button__border-width: 1px;
 
   background-color: var(--button__background-color);
   border-radius: 2px;
-  border: var(--button__border-width) solid transparent;
+  border: var(--button__border-width) solid
+    var(--button__border-color, transparent);
   color: var(--button__color);
   display: inline-flex;
   justify-content: center;
   align-items: center;
   font-family: inherit;
   font-size: var(--button__font-size);
-  font-weight: 600;
+  font-weight: var(--button__font-weight, 600);
   height: calc(var(--button__height) + var(--button__border-width));
   line-height: var(--button__height);
   // margin-right: 16px;
@@ -54,8 +56,10 @@
   }
 
   &:focus {
-    border: 1px solid var(--theme--primary);
-    box-shadow: inset 0 0 0 1px var(--theme--primary);
+    border: var(--button__border-width--focus, 1px) solid
+      var(--button__border-color--focus, var(--theme--primary));
+    box-shadow: inset 0 0 0 1px
+      var(--button__box-shadow-color--focus, var(--theme--primary));
     outline-width: 0;
   }
 
@@ -91,7 +95,8 @@
   &.xcu-button--secondary:not([disabled]) {
     --button__background-color: transparent;
     background-color: var(--button__background-color, transparent);
-    border: 1px solid var(--button__border-color, var(--theme--primary));
+    border: var(--button__border-width) solid
+      var(--button__border-color, var(--theme--primary));
   }
 
   &.xcu-button--tertiary:not([disabled]) {
