--- a/projects/form/input/src/lib/input.component.scss
+++ b/projects/form/input/src/lib/input.component.scss
@@ -1,10 +1,17 @@
 :host {
+  --background-color: #fff;
+  --border-color: rgba(var(--theme-rgb--primary), 0.3);
+  --color: var(--textcolor);
   --margin-bottom: 8px;
-  // background-color: #ffffff;
+  appearance: none;
+  background-color: var(--background-color);
   border-radius: 2px;
-  border: 1px solid rgba(36, 28, 21, 0.3);
-  display: inline-block;
+  border: 1px solid var(--border-color);
+  color: var(--color);
+  display: inline-flex;
   font-family: inherit;
+  font-size: var(--font-size--small);
+  font-weight: var(--font-weight--medium);
   margin-bottom: var(--margin-bottom);
   max-width: 635px;
   min-height: 36px;
@@ -14,16 +21,27 @@
   vertical-align: middle;
   width: 100%;
 
-  &:focus {
+  @media (prefers-color-scheme: dark) {
+    --background-color: #344056;
+
+    &:-webkit-autofill {
+      --background-color: #1e293c;
+    }
+  }
+
+  &:focus,
+  &:invalid {
     outline: none;
-    border: 1px solid var(--theme--primary);
-    box-shadow: inset 0 0 0 1px var(--theme--primary);
+    border: 1px solid var(--border-color);
+    box-shadow: inset 0 0 0 1px var(--border-color);
+  }
+
+  &:focus {
+    --border-color: var(--theme--primary);
   }
 
   &:invalid {
-    outline: none;
-    border: 1px solid var(--color--warning);
-    box-shadow: inset 0 0 0 1px var(--color--warning);
+    --border-color: var(--color--warning);
   }
 }
 
