--- a/projects/form/form-field/src/lib/form-field.component.scss
+++ b/projects/form/form-field/src/lib/form-field.component.scss
@@ -38,6 +38,7 @@
 
 .select {
   position: relative;
+  flex: 1;
 }
 
 .select-arrows {
@@ -53,4 +54,29 @@
   color: #9fa6b2;
   color: rgba(159, 166, 178, var(--text-opacity));
   height: 3.6rem;
+}
+
+.form-field-prefix {
+  --margin-bottom: 8px;
+  --border-color: rgba(var(--theme-rgb--primary), 0.3);
+
+  display: flex;
+  align-items: center;
+  margin-bottom: var(--margin-bottom, 0);
+  padding: 0 0.8rem;
+
+  min-height: 3.6rem;
+  border-radius: 2px 0 0 2px;
+  border: 1px solid var(--border-color);
+  border-right-width: 0;
+
+  & + .xcu-input-element {
+    border-bottom-left-radius: 0;
+    border-top-left-radius: 0;
+  }
+}
+
+.input-wrapper {
+  display: flex;
+  align-items: center;
 }
