refactor(input): add line height and padding to inputs

--- a/projects/form/input/src/lib/input.component.scss
+++ b/projects/form/input/src/lib/input.component.scss
@@ -12,11 +12,12 @@
   font-family: inherit;
   font-size: var(--font-size--small);
   font-weight: var(--font-weight--medium);
+  line-height: 1.8rem;
   margin-bottom: var(--margin-bottom);
   max-width: 635px;
   min-height: 36px;
   min-width: 56px;
-  padding: 0 12px;
+  padding: 0.8rem 1.2rem;
   transition: all 0.2s ease-in-out 0s;
   vertical-align: middle;
   width: 100%;
