--- a/projects/form/form-field/src/lib/form-field.component.html
+++ b/projects/form/form-field/src/lib/form-field.component.html
@@ -1,9 +1,8 @@
 <ng-content #label select="label"></ng-content>
 
-<div class="input-wrapper" [class.has-suffix]="suffixChildren.length">
-  <div class="form-field-prefix" *ngIf="prefixChildren.length">
-    <ng-content select="[xcu-prefix]"></ng-content>
-  </div>
+<div class="input-wrapper" [class.has-suffix]="suffixChildren.length"
+  [class.has-inline-suffix]="suffixChildren?.first?.inline">
+  <ng-content select="[xcu-prefix]"></ng-content>
 
   <ng-content #input select="input"></ng-content>
 
@@ -17,9 +16,7 @@
     </span>
   </div>
 
-  <div class="form-field-suffix" *ngIf="suffixChildren.length">
-    <ng-content select="[xcu-suffix]"></ng-content>
-  </div>
+  <ng-content select="[xcu-suffix]"></ng-content>
 </div>
 
 <ng-container [ngSwitch]="getDisplayedMessages()">
