--- a/projects/form/input/src/lib/input.component.scss
+++ b/projects/form/input/src/lib/input.component.scss
@@ -14,6 +14,7 @@
   font-weight: var(--font-weight--medium);
   line-height: 1.8rem;
   margin-bottom: var(--margin-bottom);
+  margin-top: 0;
   max-width: 635px;
   min-height: 36px;
   min-width: 56px;
@@ -55,4 +56,12 @@
   outline: none;
   border: 1px solid var(--color--warning);
   box-shadow: inset 0 0 0 1px var(--color--warning);
+}
+
+:host-context(.xcu-suffix.inline) {
+  border-left-width: 0;
+}
+
+:host-context(.xcu-prefix.inline) {
+  border-right-width: 0;
 }
